# "lib/ChangeLog"
#	$Id: ChangeLog,v 1.70 2011/05/07 03:43:39 fang Exp $

2012-11-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-51b:
	  wrap_verilog_modules_to_hacprsim.awk:
	  	concatenate reg-to-reg for newer vcs compilation
		of system verilog (no string casting needed).
		Still works w/ previous versions of vcs.


2012-09-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-44d:
	  verilog/vcs_scandepend.sh: improve dep scanner and regex


2012-08-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-42:
	  wrap_verilog_modules_to_hacprsim.awk:
		dummy instances emit ports connected by name
		rather than position now.


2012-08-06	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-41b:
	  lib/Makefile.am: install stdchpfn.cc to pkgdata_DATA
		for newer automake conformance (1.11.3+, 1.12+).


2011-07-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-79a:
	  New: scripts/spice-to-hac.awk to convert hierarchical spice netlists
		to HAC for crude hierarchical queries with existing tools.
	  Basic test case added in test/net/hac/.


2011-05-06	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-70+:
	  New: scripts/prsim_timed_fwdtrace.awk to find all critical
		paths that spawn from a root transition, 
		searching through a prsim watchall log.


2011-02-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-49b:
	  scripts/spice-wrap.awk: continue long comments with comment


2011-02-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-49:
	  alternator.hac: added onehot_sequencer that sequences
		an array of e1of1 channels, exclusively.
		Test case added.


2010-09-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-23-string-01-03:
	  libchpfn/conditional.cc: added strcond, documented in texinfo.


2010-09-01	David Fang	<fangism@users.sourceforge.net>
